# flask_test_study

./: manage.py  pyproject.toml  settings.toml
app/: __init__.py  ext.py
app/forms/: auth.py  post.py
app/models/: post.py  user.py
app/routes/: auth.py  home.py  post.py
app/templates/auth/: login.html  register.html
app/templates/home/: index.html
app/templates/laoyouts/: __base_page.html
app/templates/post/: detail.html  new.html
migrations/versions/: c480c5aef25f_.py
tests/: create_post_form_test.py  fixtures.py  home_test.py  login_test.py  post_test.py
tests/factories/: post.py  user.py
